Thu Dec  2 08:57:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:
          Incremented TAO version to 2.0

Wed Dec  1 00:21:47 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * templates/cdt6platforms.mpt:

          Set the outputtype_superclass so it works for
          both debug and release.

Tue Nov 30 12:58:03 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:
        * modules/MakeProjectCreator.pm:
        * modules/ProjectCreator.pm:
        * modules/VC10ProjectCreator.pm:
        * modules/VC6WorkspaceCreator.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/VC8ProjectCreator.pm:
        * modules/VC8WorkspaceCreator.pm:
        * modules/WixProjectCreator.pm:

          Made modifications to the use of constants within the
          initialization of file level hash maps.  They need to be called
          like functions in order to support Perl 5.6.

Fri Nov 12 12:39:55 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * config/mfc.mpb:
        * config/winapp.mpb:

          Factored out portions that instruct a Windows project to be a
          GUI.

        * config/wxadvanced.mpb:
        * config/wxaui.mpb:
        * config/wxbase.mpb:
        * config/wxcore.mpb:
        * config/wxdbgrid.mpb:
        * config/wxgl.mpb:
        * config/wxhtml.mpb:
        * config/wxmedia.mpb:
        * config/wxnet.mpb:
        * config/wxodbc.mpb:
        * config/wxpropertygrid.mpb:
        * config/wxqa.mpb:
        * config/wxribbon.mpb:
        * config/wxrichtext.mpb:
        * config/wxstc.mpb:
        * config/wxxml.mpb:
        * config/wxxrc.mpb:

          Added base projects for the various wxWindows.

        * config/wxmake.mpb:
        * config/wxmsvs.mpb:

          These base projects are project type specific and designed to work
          with wxWindows.  The comments inside the files describe their use.
