@@ -1698,6 +1698,21 @@
                   <tr>
                     <td rowspan="1" colspan="1">
                       <p class="Tbl-Body"><em class=
+                      "TableCode">dependent_upon</em></p>
+                    </td>
+
+                    <td rowspan="1" colspan="1">
+                      <p class="Tbl-Body">This keyword can only be used
+                      as a header component scoped setting (ie. inside
+                      the scope of Header_Files).  It determines which
+                      file the header file is dependent upon for vc8,
+                      and vc9 only.</p>
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td rowspan="1" colspan="1">
+                      <p class="Tbl-Body"><em class=
                       "TableCode">dllout</em></p>
                     </td>
 
